--- a/web/assets/styles/login_style.css
+++ b/web/assets/styles/login_style.css
@@ -1,6 +1,7 @@
 body {
 	margin: 0;
 	line-height: normal;
+	overflow: hidden;
   }
   
   :root {
@@ -31,6 +32,14 @@ body {
 	--padding-8xl: 27px;
 	--padding-xs: 12px;
 	--padding-12xs: 1px;
+  }
+  .minilog {
+	max-width: 60%;
+	height: auto;
+	object-fit: cover;
+	margin: 0;
+	padding: 0; 
+	float: right;
   }
   .cbf3820-3acc-4152-88c0-7dd0819-icon {
 	height: 59px;
@@ -368,15 +377,7 @@ body {
 	box-sizing: border-box;
 	min-width: 558px;
   }
-  .food-4k-m37wpodzrcbv5gvw-1-icon {
-	height: 1024px;
-	flex: 1;
-	position: relative;
-	max-width: 100%;
-	overflow: hidden;
-	object-fit: cover;
-	min-width: 502px;
-  }
+
   .desktop-1 {
 	width: 100%;
 	position: relative;
@@ -387,6 +388,7 @@ body {
 	align-items: flex-start;
 	justify-content: flex-start;
 	padding: 0 0 0 85px;
+	padding-right: 0;
 	box-sizing: border-box;
 	gap: var(--gap-6xl);
 	letter-spacing: normal;
